// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconNavigateLeft should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-navigate-left "
  focusable="false"
  height={48}
  viewBox="0 0 48 48"
  width={48}
>
  <path
    d="M30.8,33.2L21.7,24l9.2-9.2L28,12L16,24l12,12L30.8,33.2z"
    fill="#494949"
    stroke="#DCDCDC"
    strokeMiterlimit="10"
  />
  <path
    d="M0,0h48v48H0V0z"
    display="none"
    fill="none"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconNavigateLeft should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-navigate-left test"
  focusable="false"
  height={100}
  title="title"
  viewBox="0 0 48 48"
  width={200}
>
  <path
    d="M30.8,33.2L21.7,24l9.2-9.2L28,12L16,24l12,12L30.8,33.2z"
    fill="#494949"
    stroke="#DCDCDC"
    strokeMiterlimit="10"
  />
  <path
    d="M0,0h48v48H0V0z"
    display="none"
    fill="none"
  />
</AccessibleSVG>
`;
